--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,9 @@
   "dependencies": {
     "com.unity.2d.animation": "9.1.1",
     "com.unity.2d.pixel-perfect": "5.0.3",
-    "com.unity.2d.psdimporter": "8.0.4",
+    "com.unity.2d.psdimporter": "8.0.5",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "9.0.2",
+    "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -40,6 +40,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.collab-proxy": "2.1.0"
   }
 }
